--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
   <header class="navbar navbar-default">
     <div class="container">
-      <a class="btn btn-danger navbar-btn navbar-left" href="Jorge%20Barata.pdf">
+      <a class="btn btn-danger navbar-btn navbar-left" href="Jorge Barata.pdf">
         <span class="glyphicon glyphicon-download-alt"></span> PDF
       </a>
       <a class="btn btn-link navbar-btn navbar-left" href="http://{{page.home}}">
