--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
         <li><a href="http://{{page.stackoverflow}}">StackOverflow</a></li>
       </ul>
       <span class="navbar-text navbar-right small">
-        Last update on {{ site.time | date_to_long_string }}&nbsp;&nbsp;•&nbsp;&nbsp;Source code on <a href="http://github.com/jorgebg/cv">github.com/jorgebg/cv</a>
+        <span class="hidden-xs">Last update on {{ site.time | date_to_long_string }}&nbsp;&nbsp;•&nbsp;&nbsp;</span>Source code on <a href="http://github.com/jorgebg/cv">github.com/jorgebg/cv</a>
       </span>
     </div>
   </header>
