--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
         <blockquote class="small">
           {{page.birth}}&nbsp;&nbsp;◦&nbsp;&nbsp;{{page.address}}
           <br/>
-          <a href="tel:{{page.phone}}">{{page.phone}}</a> ◦
+          <a href="tel:{{page.phone}}">+{{page.phone}}</a> ◦
           <a href="mailto:{{page.mail}}">{{page.mail}}</a>
           <br/>
           <a href="http://{{page.home}}">{{page.home}}</a> ◦
