--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Jorge Barata | Curriculum Vitae</title>
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="Web Software Architect in Dublin">
+  <meta name="description" content="Computer Engineer, Madrid">
 
-  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <style>
     hr {
