--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
       </div>
       <div class="col-md-4">
         <blockquote class="small">
-          {{page.birth}}&nbsp;&nbsp;◦&nbsp;&nbsp;{{page.address}}
+          {{page.address}}
           <br/>
           <a href="tel:{{page.phone}}">+{{page.phone}}</a> ◦
           <a href="mailto:{{page.mail}}">{{page.mail}}</a>
