--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
         <div class="page-header">
           <h1>
             {{ page.fullname }}
-            <small>{{page.degree}}</small>
+            <small>{{page.title}}</small>
           </h1>
         </div>
       </div>
